<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarStyle="outsideOverlay">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_timer"
                android:id="@+id/textVie" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences|textPersonName"
                android:text="@string/simple"
                android:ems="10"
                android:id="@+id/name"
                android:layout_marginBottom="16dp"
                android:maxLength="40"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <NumberPicker
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/numberPicker"
                    />

                <TextView
                    android:text="@string/minutes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/min"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="16dp" />

                <NumberPicker
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/numberPicker2" />
                <TextView
                    android:text="@string/seconds"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/sec"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="16dp" />
            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text.name.save"
                android:id="@+id/button_save"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp" />





        </LinearLayout>
    </ScrollView>

</FrameLayout>